@@ -1,7 +1,5 @@
 <script type="text/javascript">
-	jQuery(document).ready(function($) {
-		'use strict';
-
+	jQuery(function($) {
 		var iconMapTable = $('#iconMapTable'),
 			addMappindButton = $('#addMapping');
 
@@ -14,7 +12,7 @@
 		}
 
 		iconMapTable.sortable({
-			disabled: (iconMapTable.find('tr.sortable').length <= 1),
+			disabled: (iconMapTable.find('tr.sortable').length < 2),
 			items: 'tbody tr.sortable',
 			axis: 'y',
 			cursor: 'move',
@@ -25,8 +23,17 @@
 			update: recalculateSortOrder,
 			helper: function(e, ui) {
 				ui.children().each(function() {
-					jQuery(this).width(jQuery(this).width());
+					var td = $(this);
+
+					td.width(td.width());
 				});
+
+				// when dragging element on safari, it jumps out of the table
+				if (SF) {
+					// move back draggable element to proper position
+					ui.css('left', (ui.offset().left - 4) + 'px');
+				}
+
 				return ui;
 			},
 			start: function(e, ui) {
@@ -38,7 +45,7 @@
 			.delegate('input.removeMapping', 'click', function() {
 				$(this).parent().parent().remove();
 
-				if (iconMapTable.find('tr.sortable').length <= 1) {
+				if (iconMapTable.find('tr.sortable').length < 2) {
 					iconMapTable.sortable('disable');
 				}
 				recalculateSortOrder();
